# jsonschema-to-zon

./: .gitignore  CHANGELOG  CONTRIBUTING.md  README.md  pylintrc  pyproject.toml
.github/workflows/: ci.yaml
jsonschema_to_zon/: __init__.py  schema.py
jsonschema_to_zon/cli/: __init__.py
jsonschema_to_zon/lib/: __init__.py  schema.py
tests/: test_schema_reader.py
tests/data/: simple_schema.json
